src/main/antlr4/imports/.antlr/ectypesParser.java
// Generated from /mnt/c/source/c-workspace/jlow3/ec.java/src/main/antlr4/imports/ectypes.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ectypesParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, T__81=82, T__82=83, T__83=84, T__84=85, T__85=86, T__86=87, 
		T__87=88, T__88=89, T__89=90, T__90=91, T__91=92, T__92=93, T__93=94, 
		RANGE=95, ID=96, ANONYMOUS=97, NUM=98, FLOAT=99, STRING=100, CSTRING=101, 
		BLOCK_COMMENT=102, LINE_COMMENT=103, WS=104, EOL=105;
	public static final int
		RULE_var_type = 0, RULE_builtin_primatives = 1, RULE_builtin_values = 2, 
		RULE_comparator = 3, RULE_assign = 4, RULE_predicate = 5, RULE_operator_mul = 6, 
		RULE_operator_add = 7, RULE_operator_plus = 8, RULE_operator_minus = 9, 
		RULE_keyword_ampersand = 10, RULE_operator_bin = 11, RULE_operator_shift = 12, 
		RULE_accessor_type = 13, RULE_keyword_lbrace = 14, RULE_keyword_rbrace = 15, 
		RULE_keyword_lparen = 16, RULE_keyword_rparen = 17, RULE_keyword_lbracket = 18, 
		RULE_keyword_rbracket = 19, RULE_keyword_semi = 20, RULE_keyword_equals = 21, 
		RULE_keyword_comma = 22, RULE_keyword_if = 23, RULE_keyword_not = 24, 
		RULE_keyword_else = 25, RULE_keyword_loop = 26, RULE_keyword_public = 27, 
		RULE_keyword_private = 28, RULE_keyword_protected = 29, RULE_keyword_hidden = 30, 
		RULE_keyword_imports = 31, RULE_keyword_is = 32, RULE_keyword_with = 33, 
		RULE_keyword_in = 34, RULE_keyword_try = 35, RULE_keyword_catch = 36, 
		RULE_keyword_finally = 37, RULE_keyword_throw = 38, RULE_keyword_throws = 39, 
		RULE_keyword_break = 40, RULE_keyword_continue = 41, RULE_keyword_switch = 42, 
		RULE_keyword_case = 43, RULE_keyword_default = 44, RULE_keyword_return = 45, 
		RULE_keyword_return_add = 46, RULE_keyword_static = 47, RULE_keyword_final = 48, 
		RULE_keyword_void = 49, RULE_keyword_signature = 50, RULE_keyword_enum = 51, 
		RULE_keyword_plan = 52, RULE_keyword_class = 53, RULE_keyword_properties = 54, 
		RULE_keyword_stub = 55, RULE_keyword_function = 56, RULE_keyword_lambda = 57, 
		RULE_keyword_true = 58, RULE_keyword_false = 59, RULE_keyword_namespace = 60, 
		RULE_keyword_global = 61, RULE_type_range = 62, RULE_base_ident = 63, 
		RULE_type_anonymous = 64, RULE_type_num = 65, RULE_type_float = 66, RULE_type_string = 67, 
		RULE_eol = 68;
	public static final String[] ruleNames = {
		"var_type", "builtin_primatives", "builtin_values", "comparator", "assign", 
		"predicate", "operator_mul", "operator_add", "operator_plus", "operator_minus", 
		"keyword_ampersand", "operator_bin", "operator_shift", "accessor_type", 
		"keyword_lbrace", "keyword_rbrace", "keyword_lparen", "keyword_rparen", 
		"keyword_lbracket", "keyword_rbracket", "keyword_semi", "keyword_equals", 
		"keyword_comma", "keyword_if", "keyword_not", "keyword_else", "keyword_loop", 
		"keyword_public", "keyword_private", "keyword_protected", "keyword_hidden", 
		"keyword_imports", "keyword_is", "keyword_with", "keyword_in", "keyword_try", 
		"keyword_catch", "keyword_finally", "keyword_throw", "keyword_throws", 
		"keyword_break", "keyword_continue", "keyword_switch", "keyword_case", 
		"keyword_default", "keyword_return", "keyword_return_add", "keyword_static", 
		"keyword_final", "keyword_void", "keyword_signature", "keyword_enum", 
		"keyword_plan", "keyword_class", "keyword_properties", "keyword_stub", 
		"keyword_function", "keyword_lambda", "keyword_true", "keyword_false", 
		"keyword_namespace", "keyword_global", "type_range", "base_ident", "type_anonymous", 
		"type_num", "type_float", "type_string", "eol"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'?'", "'u8'", "'i8'", "'u16'", "'i16'", "'u32'", "'i32'", "'f32'", 
		"'u64'", "'i64'", "'f64'", "'f128'", "'f80'", "'boolean'", "'b8'", "'num'", 
		"'pointer'", "'int'", "'null'", "'<'", "'>'", "'=='", "'>='", "'<='", 
		"'!='", "'==='", "'&='", "'~='", "'||'", "'&&'", "'+='", "'*='", "'/='", 
		"'-='", "'%='", "'++'", "'--'", "'*'", "'/'", "'%'", "'+'", "'-'", "'&'", 
		"'|'", "'>>'", "'<<'", "'{'", "'}'", "'('", "')'", "'['", "']'", "';'", 
		"'='", "','", "'if'", "'!'", "'else'", "'loop'", "'public'", "'private'", 
		"'protected'", "'hidden'", "'imports'", "'is'", "'with'", "'in'", "'try'", 
		"'catch'", "'finally'", "'throw'", "'throws'", "'break'", "'continue'", 
		"'switch'", "'case'", "'default'", "'return'", "'return.add'", "'static'", 
		"'final'", "'void'", "'signature'", "'enum'", "'plan'", "'class'", "'properties'", 
		"'stub'", "'function'", "'=>'", "'true'", "'false'", "'namespace'", "'global'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, "RANGE", 
		"ID", "ANONYMOUS", "NUM", "FLOAT", "STRING", "CSTRING", "BLOCK_COMMENT", 
		"LINE_COMMENT", "WS", "EOL"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ectypes.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ectypesParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Var_typeContext extends ParserRuleContext {
		public Var_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_type; }
	}

	public final Var_typeContext var_type() throws RecognitionException {
		Var_typeContext _localctx = new Var_typeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_var_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Builtin_primativesContext extends ParserRuleContext {
		public Keyword_functionContext keyword_function() {
			return getRuleContext(Keyword_functionContext.class,0);
		}
		public Builtin_primativesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_builtin_primatives; }
	}

	public final Builtin_primativesContext builtin_primatives() throws RecognitionException {
		Builtin_primativesContext _localctx = new Builtin_primativesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_builtin_primatives);
		try {
			setState(158);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				setState(140);
				match(T__1);
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				setState(141);
				match(T__2);
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 3);
				{
				setState(142);
				match(T__3);
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 4);
				{
				setState(143);
				match(T__4);
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 5);
				{
				setState(144);
				match(T__5);
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 6);
				{
				setState(145);
				match(T__6);
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 7);
				{
				setState(146);
				match(T__7);
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 8);
				{
				setState(147);
				match(T__8);
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 9);
				{
				setState(148);
				match(T__9);
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 10);
				{
				setState(149);
				match(T__10);
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 11);
				{
				setState(150);
				match(T__11);
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 12);
				{
				setState(151);
				match(T__12);
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 13);
				{
				setState(152);
				match(T__13);
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 14);
				{
				setState(153);
				match(T__14);
				}
				break;
			case T__15:
				enterOuterAlt(_localctx, 15);
				{
				setState(154);
				match(T__15);
				}
				break;
			case T__16:
				enterOuterAlt(_localctx, 16);
				{
				setState(155);
				match(T__16);
				}
				break;
			case T__88:
				enterOuterAlt(_localctx, 17);
				{
				setState(156);
				keyword_function();
				}
				break;
			case T__17:
				enterOuterAlt(_localctx, 18);
				{
				setState(157);
				match(T__17);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Builtin_valuesContext extends ParserRuleContext {
		public Keyword_trueContext keyword_true() {
			return getRuleContext(Keyword_trueContext.class,0);
		}
		public Keyword_falseContext keyword_false() {
			return getRuleContext(Keyword_falseContext.class,0);
		}
		public Builtin_valuesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_builtin_values; }
	}

	public final Builtin_valuesContext builtin_values() throws RecognitionException {
		Builtin_valuesContext _localctx = new Builtin_valuesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_builtin_values);
		try {
			setState(163);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__18:
				enterOuterAlt(_localctx, 1);
				{
				setState(160);
				match(T__18);
				}
				break;
			case T__90:
				enterOuterAlt(_localctx, 2);
				{
				setState(161);
				keyword_true();
				}
				break;
			case T__91:
				enterOuterAlt(_localctx, 3);
				{
				setState(162);
				keyword_false();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComparatorContext extends ParserRuleContext {
		public ComparatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comparator; }
	}

	public final ComparatorContext comparator() throws RecognitionException {
		ComparatorContext _localctx = new ComparatorContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_comparator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__29))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignContext extends ParserRuleContext {
		public Keyword_equalsContext keyword_equals() {
			return getRuleContext(Keyword_equalsContext.class,0);
		}
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assign);
		try {
			setState(173);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__53:
				enterOuterAlt(_localctx, 1);
				{
				setState(167);
				keyword_equals();
				}
				break;
			case T__30:
				enterOuterAlt(_localctx, 2);
				{
				setState(168);
				match(T__30);
				}
				break;
			case T__31:
				enterOuterAlt(_localctx, 3);
				{
				setState(169);
				match(T__31);
				}
				break;
			case T__32:
				enterOuterAlt(_localctx, 4);
				{
				setState(170);
				match(T__32);
				}
				break;
			case T__33:
				enterOuterAlt(_localctx, 5);
				{
				setState(171);
				match(T__33);
				}
				break;
			case T__34:
				enterOuterAlt(_localctx, 6);
				{
				setState(172);
				match(T__34);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PredicateContext extends ParserRuleContext {
		public PredicateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_predicate; }
	}

	public final PredicateContext predicate() throws RecognitionException {
		PredicateContext _localctx = new PredicateContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_predicate);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			_la = _input.LA(1);
			if ( !(_la==T__35 || _la==T__36) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Operator_mulContext extends ParserRuleContext {
		public Operator_mulContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operator_mul; }
	}

	public final Operator_mulContext operator_mul() throws RecognitionException {
		Operator_mulContext _localctx = new Operator_mulContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_operator_mul);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(177);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__37) | (1L << T__38) | (1L << T__39))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Operator_addContext extends ParserRuleContext {
		public Operator_minusContext operator_minus() {
			return getRuleContext(Operator_minusContext.class,0);
		}
		public Operator_plusContext operator_plus() {
			return getRuleContext(Operator_plusContext.class,0);
		}
		public Operator_addContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operator_add; }
	}

	public final Operator_addContext operator_add() throws RecognitionException {
		Operator_addContext _localctx = new Operator_addContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_operator_add);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(181);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__41:
				{
				setState(179);
				operator_minus();
				}
				break;
			case T__40:
				{
				setState(180);
				operator_plus();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Operator_plusContext extends ParserRuleContext {
		public Operator_plusContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operator_plus; }
	}

	public final Operator_plusContext operator_plus() throws RecognitionException {
		Operator_plusContext _localctx = new Operator_plusContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_operator_plus);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183);
			match(T__40);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Operator_minusContext extends ParserRuleContext {
		public Operator_minusContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operator_minus; }
	}

	public final Operator_minusContext operator_minus() throws RecognitionException {
		Operator_minusContext _localctx = new Operator_minusContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_operator_minus);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(185);
			match(T__41);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Keyword_ampersandContext extends ParserRuleContext {
		public Keyword_ampersandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_keyword_ampersand; }
	}

	public final Keyword_ampersandContext keyword_ampersand() throws RecognitionException {
		Keyword_ampersandContext _localctx = new Keyword_ampersandContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_keyword_ampersand);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(187);
			match(T__42);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Operator_binContext extends ParserRuleContext {
		public Keyword_ampersandContext keyword_ampersand() {
			return getRuleContext(Keyword_ampersandContext.class,0);
		}
		public Operator_binContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operator_bin; }
	}

	public final Operator_binContext operator_bin() throws RecognitionException {
		Operator_binContext _localctx = new Operator_binContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_operator_bin);
		try {
			setState(191);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__42:
				enterOuterAlt(_localctx, 1);
				{
				setState(189);
				keyword_ampersand();
				}
				break;
			case T__43:
				enterOuterAlt(_localctx, 2);
				{
				setState(190);
				match(T__43);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Operator_shiftContext extends ParserRuleContext {
		public Operator_shiftContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operator_shift; }
	}

	public final Operator_shiftContext operator_shift() throws RecognitionException {
		Operator_shiftContext _localctx = new Operator_shiftContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_operator_shift);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(193);
			_la = _input.LA(1);
			if ( !(_la==T__44 || _la==T__45) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Accessor_typeContext extends ParserRuleContext {
		public Keyword_publicContext keyword_public() {
			return getRuleContext(Keyword_publicContext.class,0);
		}
		public Keyword_privateContext keyword_private() {
			return getRuleContext(Keyword_privateContext.class,0);
		}
		public Keyword_protectedContext keyword_protected() {
			return getRuleContext(Keyword_protectedContext.class,0);
		}
		public Keyword_hiddenContext keyword_hidden() {
			return getRuleContext(Keyword_hiddenContext.class,0);
		}
		public Accessor_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_accessor_type; }
	}

	public final Accessor_typeContext accessor_type() throws RecognitionException {
		Accessor_typeContext _localctx = new Accessor_typeContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_accessor_type);
		try {
			setState(199);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__59:
				enterOuterAlt(_localctx, 1);
				{
				setState(195);
				keyword_public();
				}
				break;
			case T__60:
				enterOuterAlt(_localctx, 2);
				{
				setState(196);
				keyword_private();
				}
				break;
			case T__61:
				enterOuterAlt(_localctx, 3);
				{
				setState(197);
				keyword_protected();
				}
				break;
			case T__62:
				enterOuterAlt(_localctx, 4);
				{
				setState(198);
				keyword_hidden();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Keyword_lbraceContext extends ParserRuleContext {
		public Keyword_lbraceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_keyword_lbrace; }
	}

	public final Keyword_lbraceContext keyword_lbrace() throws RecognitionException {
		Keyword_lbraceContext _localctx = new Keyword_lbraceContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_keyword_lbrace);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(201);
			match(T__46);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Keyword_rbraceContext extends ParserRuleContext {
		public Keyword_rbraceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_keyword_rbrace; }
	}

	public final Keyword_rbraceContext keyword_rbrace() throws RecognitionException {
		Keyword_rbraceContext _localctx = new Keyword_rbraceContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_keyword_rbrace);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(203);
			match(T__47);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Keyword_lparenContext extends ParserRuleContext {
		public Keyword_lparenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_keyword_lparen; }
	}
